# mopf

./: .gitignore  CMakeLists.txt  LICENSE  README.md
3d_reconstruction/: CMakeLists.txt
3d_reconstruction/src/: parallelstereo.cpp
algebra/: CMakeLists.txt
algebra/src/: series.h
analysis/: CMakeLists.txt
analysis/src/: CMakeLists.txt  analysis.h
data/: iris  mnist  movingcar
device/src/: usbcam.cpp  usbcam.h
ext/mnist/: CMakeLists.txt  mnist_reader.hpp
game/: CMakeLists.txt
game/param/: param.txt
game/src/: game.cpp  game.h  param.cpp  param.h  swim_game.cpp
game/src/test/: CMakeLists.txt  game.test.cpp  swim_game.cpp
image/: CMakeLists.txt
image/src/: CMakeLists.txt  image.cpp  image.h
linear_algebra/: CMakeLists.txt
linear_algebra/src/: CMakeLists.txt  least_square.cpp  least_square.h  matrix.cpp  matrix.h  vector.cpp  vector.h
machine_learning/: CMakeLists.txt
machine_learning/data_handler/: CMakeLists.txt
machine_learning/knearest_neighbor/: CMakeLists.txt
machine_learning/knearestneighbor/: CMakeLists.txt
machine_learning/neuralnet/: .gitignore  CMakeLists.txt
machine_learning/neuralnet/data/: kx_trainingdata.txt  x^2_trainingdata.txt
machine_learning/neuralnet/doc/: Visualizer.dia  computation_time_NN.ods  neuralnet_classdiagram.dia  neuralnet_flowchart_learning.dia  neuralnet_learning.dia  result_NN.ods
machine_learning/neuralnet/doc/tex/: neuralnet.tex  neuralnet_architecture.eps
machine_learning/neuralnet/param/: param.txt
machine_learning/neuralnet/prm/: param.txt
machine_learning/neuralnet/script/: neuralnet.sh
machine_learning/neuralnet/src/: datahandler.cpp  datahandler.h  daviddatahandler.cpp  daviddatahandler.h  irisdatahandler.cpp  irisdatahandler.h  main.cpp  neuralnet.cpp  neuralnet.h  neuralnethandler.cpp  neuralnethandler.h  param.cpp  param.h  util.cpp  util.h  visualizer.cpp  visualizer.h
machine_learning/neuralnet/src_createdata/: main.cpp
mopf/3d_reconstruction/: CMakeLists.txt
mopf/algebra/: CMakeLists.txt
mopf/analysis/: CMakeLists.txt
mopf/data/: david_miller
mopf/device/: CMakeLists.txt
mopf/game/: CMakeLists.txt
mopf/image/: CMakeLists.txt
mopf/image_process/: CMakeLists.txt
mopf/linear_algebra/: CMakeLists.txt
mopf/machine_learning/neuralnet/: CMakeLists.txt
mopf/machine_learning/neuralnet/doc/: neuralnet_architecture.odg  neuralnet_test.dia
mopf/machine_learning/neuralnet/doc/tex/: neuralnet.tex
mopf/machine_learning/neuralnet/src/: main.cpp  neuralnet.cpp  neuralnethandler.cpp  param.cpp  util.cpp  util.h  visualizer.cpp  visualizer.h
mopf/optimization/: CMakeLists.txt
mopf/video/: CMakeLists.txt
mopf/video/sample/: CMakeLists.txt  sample_realsense.cpp  sample_realsense_stabilizer.cpp  sample_videostabilizer.cpp  sample_videostitcher.cpp
mopf/visualization/: CMakeLists.txt
optimization/src/: CMakeLists.txt  hill_climbing.cpp  hill_climbing.h  hill_climbing.tpp  optimization_visualizer.cpp  optimization_visualizer.h  visualizer_1d.cpp  visualizer_1d.cpp.autosave  visualizer_1d.h
sample/: CMakeLists.txt
sample/image/: sample_sift.cpp
sample/src/: video_stabilization.cpp
sample/video/: sample_realsense_stabilizer.cpp  sample_videostabilizer.cpp  sample_videostitcher.cpp
string_util/: CMakeLists.txt
string_util/src/: string_util.cpp
video/: CMakeLists.txt
video/src/: video.cpp  video.h  videostabilizer.cpp  videostabilizer.h
visualization/: CMakeLists.txt
visualization/src/: CMakeLists.txt  visualization.cpp  visualization.h
(+95 files in other folders)
