cmake_minimum_required(VERSION 2.8)

add_subdirectory(3d_reconstruction)
add_subdirectory(algebra)
add_subdirectory(analysis)
add_subdirectory(ext)
add_subdirectory(game)
add_subdirectory(image)
add_subdirectory(linear_algebra)
add_subdirectory(machine_learning)
add_subdirectory(optimization)
add_subdirectory(visualization)
