project(video_sample)
include_directories(${CMAKE_SOURCE_DIR})

add_executable(sample_videostabilizer sample_videostabilizer.cpp)
target_link_libraries(sample_videostabilizer video)

add_executable(sample_videostitcher sample_videostitcher.cpp)
target_link_libraries(sample_videostitcher video)

add_executable(sample_realsense sample_realsense.cpp)
target_link_libraries(sample_realsense video visualization)

add_executable(sample_realsense_stabilizer sample_realsense_stabilizer.cpp)
target_link_libraries(sample_realsense_stabilizer video visualization)
